saga-28/manifest/delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-app
  template:
    metadata:
      labels:
        app: delivery-app
    spec:
      containers:
      - name: delivery
        image: dkuser2/otus-saga-28:v1
        workingDir: /app/delivery
        command: ["python"]
        args: ["manage.py", "runserver", "0:8000"]
        ports:
        - name: web
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: delivery
  labels:
    app: delivery-app
spec:
  selector:
    app: delivery-app
  ports:
    - protocol: TCP
      port: 8000
      name: web
      targetPort: web
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /delivery(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: delivery
            port:
              number: 8000
